posiGen_FullsendBox/src/objects/Opp_Summary__c.object
<CustomObject>
    <description>Summarizes Opportunity information</description>
    <fields>
        <fullName>ACH_Payment_Date__c</fullName>
        <formula>VALUE(TEXT(Opportunity__r.ACH_Payment_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACH Payment Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opp Summaries</relationshipLabel>
        <relationshipName>Opp_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EE_Month_01__c</fullName>
        <formula>Opportunity__r.EE_Month_01__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EE Month 01</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EE_Month_02__c</fullName>
        <formula>Opportunity__r.EE_Month_02__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EE Month 02</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EE_Month_03__c</fullName>
        <formula>Opportunity__r.EE_Month_03__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EE Month 03</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EstLeasStrtDt__c</fullName>
        <formula>Opportunity__r.Estimated_Lease_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Lease Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinanceBillPayOpts__c</fullName>
        <formula>TEXT(Opportunity__r.Financing_Bill_Payment_Options__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financing Bill Payment Options</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_EE__c</fullName>
        <formula>INCLUDES( Opportunity__r.Solar_Product__c, &quot;Energy Efficiency&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has EE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_SHW__c</fullName>
        <formula>Includes( Opportunity__r.Solar_Product__c , &quot;Solar Hot Water&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has SHW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lease_System_Monthly_Payment__c</fullName>
        <formula>Opportunity__r.Lease_System_Monthly_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lease System Monthly Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opp Summaries</relationshipLabel>
        <relationshipName>Opp_Summaries</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PV_Month_01__c</fullName>
        <formula>Opportunity__r.PV_Month_01__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PV Month 01</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PV_Month_02__c</fullName>
        <formula>Opportunity__r.PV_Month_02__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PV Month 02</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PV_Month_03__c</fullName>
        <formula>Opportunity__r.PV_Month_03__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PV Month 03</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Solar_Product__c</fullName>
        <formula>INCLUDES( Opportunity__r.Solar_Product__c, &quot;Solar Panels&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has PV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System_Size_in_KW__c</fullName>
        <formula>Opportunity__r.System_Size_in_KW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Size in KW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Validation_EE_Monthly_Payment__c</fullName>
        <formula>Opportunity__r.Validation_EE_Monthly_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Validation EE Monthly Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Opp Summary</label>
    <nameField>
        <displayFormat>OPSUM{00000}</displayFormat>
        <label>Opp Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opp Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>